# claudemon

./: .gitignore  BUG_FIX_PASS.md  CLAUDE.md  CLAUDE.md:Zone.Identifier  CLAUDE_INTEGRATION_DESIGN.md  CLAUDE_README.md  CMakeLists.txt  README.md  URGENT_FIXES.md  VERIFICATION_SYSTEM.md  build.bat  build.sh  claude-config.example.json  claude.md  setup-claude.bat  setup-claude.sh  setup.bat  setup.sh  version.cmake
include/mgba/feature/claude/: ai-player.h  api-client.h
scripts/: pokemon_emerald_state.lua
src/feature/claude/: CMakeLists.txt  ai-player.c  api-client.c
src/platform/qt/: CMakeLists.txt  ClaudeController.cpp  ClaudeController.h  ClaudeView.cpp  ClaudeView.h  Window.cpp  Window.h
src/util/image/: font.c
